# JitterSketch

./: CMakeLists.txt  README.md  settings.conf
src/: main.cc
src/detector/: AbstractDetector.hh  GroundTruthDetector.hh
src/experiment/: JitterControlExperiment.cc  JitterControlExperiment.hh  test.hh  testing.cc  testing.hh
src/optimizer/: JitterOptimizer.hh  JitterSketchOptimizer.cc  JitterSketchOptimizer.hh  OLDCOptimizer.cc  OLDCOptimizer.hh
src/sketch/: BitBloomFilter.hh  BloomFilter.hh  CMSketch.hh  DelaySketch.hh  FDFilter.hh  JitterSketch.hh  JitterSketchS1Opt.cc  JitterSketchS1Opt.hh
src/utils/: BOBHash.cc  BOBHash.hh  INIReader.h  core.cc  core.hh  flowkey.hh  hash.hh
